# vault

./: .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml  install.sh  justfile  vault.service
.sqlx/: query-2493a1429538b1e3d070d6501ecd7944eb088d7978e81509483ac82d38803927.json  query-3fac3fd69059a36e8f51551a3062f0bf3c89dd7800f08014eb23e03285cd78b8.json  query-4a12f3b4b382659394b8faf8ef2ec51887eb1a20addf463b556c8ff8ec49f3f5.json  query-4a4611116adfd2b0aba45b9e65f03b27e15d0b21b79d7f6dc2ed34a74e8957cc.json  query-4f03f24d59ca61f6b8e2dcbc0ac27006841e335759aade6ee4471e318629a112.json  query-60c5774d432273df8e191d6f72f004415d6778670d4709735bc753abf601777c.json  query-78e2897c4339818fec622c097cf1ce4a62690abc3bf4f0340cd0a8b5d62a885d.json  query-794ac29ca775b435ec202f0ca0dec96591ce44bcaccdec249a015688f2adef06.json  query-b5e6f1a01b9844c8f00bd5e619a1e6de702b25b53b2fde64e22e8c9761759cbb.json  query-c6dac68168b72cb6250fcd7fec76de19fbdb9e7ba1beb9703f066ca514b16fd6.json  query-e5c84a01429d7e350df1147d230c1a32009affb245cf7ecb759731c94564c541.json  query-f7af1d91c17ec0985e4c0d859ff1cb4ab8a4f3451226728fb0741b38c5d3166d.json  query-fbdbe4e77b817670a2b670f88960ef11e0a6ad6b03a98266789f24fceb7a882b.json
docs/: api_routes.md
driver/: Cargo.toml  makefile.toml
front/: index.html  package.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend_new/: Dockerfile  jsrepo.json  package.json  svelte.config.js  vite.config.ts
migrations/: 20250219211058_inital.sql  (+1 more)
src/: cipher.rs  main.rs  (+6 more)
(+100 files in other folders)
