[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["tracing"] }
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
pbkdf2 = "0.12.2"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }